Fixed stretching on mobile device

--- a/slideshow.css
+++ b/slideshow.css
@@ -74,20 +74,22 @@
     opacity: 1;
 }
 
-.center-slide {
+.keep-img, .stretch-img {
   max-width: 100%;
   height: 100%;
   margin: auto;
 }
 
-/* @media only screen
-and (max-width: 415px)
+@media only screen 
+and (max-width: 425px) 
 and (orientation: portrait) {
-  #slide0, #slide2, #slide4, 
-  #slide5, #slide6, #slide11 {
-    display: none;
+  .stretch-img {
+    height: 43%;
+    width: 100%;
+    top: 34%; 
+    position: relative; 
   }
-} */
+}
 
 @media only screen
     and (max-width: 824px)
